_sass/show.scss
.show-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-evenly;
  flex: 1 0 0;
}
// .show-container {
//   display: flex;
//   flex-direction: column;
//   justify-content: space-evenly;
// }
.expect-offer-wrap {
  display: flex;
  flex-direction: row;
  margin-right: 0.5rem;
}
.expectation {
  text-align: right;
  padding-right: 0.5em;
}
.offer {
  padding-left: 0.5em;
  margin-top: 3rem;
  margin-left: 2rem;
}
//Footer-Show Navigation
.show-footer-wrap {
  flex-shrink: 0;
}
.show-footer {
  width: 100vw;
  padding-top: 2em;
  border-top: solid 3px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;

  h1{
    font: 100% $happy;
    font-size: 30px;
    text-align: center;
  }
}
.show-navigation {
  margin-top: 1em;
  display: flex;
  width: 80%;
  align-items: center;
  justify-content: center;
}
.button-show {
  width: 10rem;
  margin: 0 5em;
  padding: 1em 2em;
  background: $yellow;
  color: $blue;
  font-weight: 900;
  text-align: center;
}
.active-button-show {
  background: $green;
  color: $yellow;
  text-decoration: underline;
  font-weight: 900;
  text-align: center;
  margin: 0 5em;
  padding: 1em 2em;
}
a.active-button-show:hover {
  color: $yellow;
}
a.button-show:hover {
  color: $blue;
}
.img-show-wrap {
  display: block;
}
.img-show{
  margin-top: -3rem;
  margin-right: 3rem;
  width: 30rem;
  border: solid 3px;
}

